# stemtool

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.ipynb_checkpoints/: setup-checkpoint.py
citesoft/: meta.yaml
docs/: conf.py  index.rst  modules.rst  requirements.txt  stemtool.afit.rst  stemtool.beam.rst  stemtool.dpc.rst  stemtool.eels.rst  stemtool.gpa.rst  stemtool.nbed.rst  stemtool.proc.rst  stemtool.rst  stemtool.sim.rst  stemtool.util.rst
docs/examples/: ImageSimulation.ipynb
matplotlib-scalebar/: meta.yaml
notebooks/: ImageSimulation.ipynb  Ptycho_SSB.ipynb  Strain_4DSTEM.ipynb  Strain_GPA.ipynb  Untitled.ipynb
stemtool/: __init__.py  __version__.py  __version__.py.orig  timer.py
stemtool/afit/: __init__.py  atom_positions.py  drift_corr.py
stemtool/beam/: gen_probe.py
stemtool/dpc/: __init__.py  atomic_dpc.py  dpc_utils.py  dpc_utils_BACKUP_3153398.py  dpc_utils_BASE_3153398.py  dpc_utils_REMOTE_3153398.py  nbed_dpc.py
stemtool/eels/: __init__.py  eels_tools.py
stemtool/gpa/: __init__.py  gpa.py
stemtool/nbed/: __init__.py  nbed_strain.py
stemtool/proc/: sobel_canny.py
stemtool/sim/: __init__.py  multislice.py
stemtool/util/: __init__.py  fourier_reg.py  gauss_utils.py  image_utils.py  pnccd.py  sobel_canny.py
stemtools/: __init__.py  __version__.py  atom_positions.py  image_utils.py  nanobeam_diffraction_strain.py  sobel_canny.py  timer.py
stemtools/.ipynb_checkpoints/: __init__-checkpoint.py  gauss_tools-checkpoint.py  gpa-checkpoint.py  image_utils-checkpoint.py  nanobeam_diffraction_strain-checkpoint.py
stemtools/adf/: gpa.py
stemtools/afit/: atom_positions.py
stemtools/analyze2D/: __init__.py  gpa.py
stemtools/atom_fit/: __init__.py  atom_positions.py
stemtools/beam/: gen_probe.py
stemtools/dpc/: __init__.py  atomic_dpc.py  dpc.py  nbed_dpc.py
stemtools/eels/: eels_tools.py
stemtools/gpa/: gpa.py
stemtools/nbed/: __init__.py  nbed_strain.py
stemtools/probe/: __init__.py  gen_probe.py
(+21 files in other folders)
