[tool.poetry]
name = "STEMTool"
version = "0.535"
description = "A single package for analyzing atomic resolution STEM, 4D-STEM and STEM-EELS datasets, along with basic STEM simulation functionality"
authors = ["Debangshu Mukherjee <mukherjeed@ornl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyfftw = "^0.10.3"
scipy = "^1.0.0"
numpy = "^1.13.0"
pywavelets = "^0.5.2"
matplotlib = "^2.2.0"
pillow = "^8.3.2"
numba = "^0.45.0"
scikit-image = "^0.13.0"
matplotlib-scalebar = "^0.5.0"
ase = "^3.16.0"
h5py = "^2.7.0"
dask = "^2021.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
