[project]
name = "STEMTool"
version = "2023.11.28"
description = "A single package for analyzing atomic resolution STEM, 4D-STEM and STEM-EELS datasets, along with basic STEM simulation functionality"
authors = [{name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov"}]
license = {file = "LICENSE"}
maintainers = [{name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov"}]
keywords = [
    "elecron microscopy", 
    "TEM", 
    "STEM", 
    "4D-STEM",
    "STEM-EELS",
    "Microscope Simulation"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pywavelets >= 0.5.2",
    "numpy >= 1.13.0",
    "scipy >= 1.0.0",
    "matplotlib >= 2.2.0",
    "pillow >= 10.1.0",
    "scikit-image >= 0.13.0",
    "matplotlib-scalebar >= 0.5.0",
    "ase >= 3.16.0",
    "h5py >= 3.7.0",
    "dask >= 2021.9.0",
]

[project.urls]
Homepage = "https://github.com/pycroscopy/stemtool"
Issues = "https://github.com/pycroscopy/stemtool/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
